--- a/src/pages/Page.css
+++ b/src/pages/Page.css
@@ -1,23 +1,24 @@
 .container {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
-  grid-template-rows: 1fr 10fr;
-  text-align: center;
 }
 
-.submit {
+.header {
   display: block;
+  height: 3em;
+  width: 100%;
   background-color: grey;
   grid-column: 1/4;
 }
 
-.submit form {
-  width: 25%;
+.listing form {
+  width: 100%;
   display: grid;
+  margin: 5% 0% 0%;
 }
 
-.submit form textarea,
-.submit form button {
+.listing form textarea,
+.listing form button {
   resize: none;
   grid-column: 1/3;
   font-family: inherit;
