Added title with link to main, added white backgound to the listings

--- a/src/components/bulletin-components/Bulletin.css
+++ b/src/components/bulletin-components/Bulletin.css
@@ -9,7 +9,7 @@
 }
 
 .bulletin {
-  background-color: whitesmoke;
+  background-color: white;
   border-radius: 0.2em;
   box-shadow: 0.1em 0.1em #646464;
 }
