--- a/src/components/bulletin-components/Bulletin.css
+++ b/src/components/bulletin-components/Bulletin.css
@@ -1,6 +1,6 @@
 .bulletinList {
   display: grid;
-  row-gap: 0.5em;
+  row-gap: 16px;
   margin: 3% 0% 1%;
 }
 
@@ -9,13 +9,15 @@
 }
 
 .bulletin {
+  padding: 24px;
   background-color: white;
   border-radius: 0.2em;
-  box-shadow: 0.1em 0.1em #646464;
+  box-shadow: 0em 0.1em 8px rgba(0, 0, 0, 0.2);
 }
 
 .bulletin p {
   color: rgb(94, 93, 93);
+  margin-top: 0;
 }
 
 .bulletinHeader {
@@ -24,23 +26,24 @@
 }
 
 .title {
-  padding: 10px;
   text-align: start;
 }
 
 .title h2 {
   color: #000;
+  font-size: 120%;
   text-decoration: none;
+  margin-top: 0%;
+  word-break: break-all;
 }
 
 .username {
-  padding: 10px;
   text-align: end;
   font-size: 80%;
 }
 
 .message {
   color: #000;
-  padding: 10px;
   text-align: start;
+  word-break: break-all;
 }
