--- a/src/pages/Page.css
+++ b/src/pages/Page.css
@@ -1,6 +1,7 @@
 .container {
-  display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0 16px;
 }
 
 .header {
@@ -11,6 +12,8 @@
 }
 
 .header h1 {
+  padding: 16px 0;
+  margin-top: 0%;
   font-size: 125%;
   color: white;
 }
@@ -19,15 +22,32 @@
   text-decoration: none;
 }
 
-.listing {
-  background-color: white;
-  box-shadow: 0.2em 0em white;
+.listing input,
+.listing textarea {
+  padding: 16px;
+  box-shadow: 0em 0.1em 8px rgba(0, 0, 0, 0.2);
+  border: 0;
+  border-radius: 0.2em;
+}
+
+.listing button {
+  box-shadow: 0em 0.1em 8px rgba(0, 0, 0, 0.2);
+  border: 0;
+  border-radius: 0.2em;
+  background-color: #5f27cd;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 24px;
 }
 
 .listing form {
   width: 100%;
   display: grid;
   margin: 5% 0% 0%;
+  column-gap: 16px;
+  row-gap: 16px;
 }
 
 .listing form textarea,
@@ -35,5 +55,4 @@
   resize: none;
   grid-column: 1/3;
   font-family: inherit;
-  font-size: 90%;
 }
