--- a/src/components/bulletin-components/Bulletin.css
+++ b/src/components/bulletin-components/Bulletin.css
@@ -25,11 +25,8 @@
   grid-template-columns: 70fr 30fr;
 }
 
-.title {
+.bulletinHeader h2 {
   text-align: start;
-}
-
-.title h2 {
   color: #000;
   font-size: 120%;
   text-decoration: none;
